[package]
name = "crml-support"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://cennznet/cennznet"
description = "Common crml types and traits"

[dependencies]
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", default-features = false, features = ["derive"], optional = true }
primitive-types = {version = "0.10.1", default-features = false, features = ["impl-codec", "impl-serde"] }
sp-runtime = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false }
sp-std = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false }
frame-support = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false }
frame-system = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false }
pallet-evm = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "890a535d105d206f7427550794c1973eeff9dd52" }
impl-trait-for-tuples = "0.2.1"
cennznet-primitives = { path = "../../primitives", default-features = false }
precompile-utils = { path = "../../evm-precompiles/utils", default-features = false }

[dev-dependencies]
hex-literal = { version = "0.3.1", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde/std",
	"primitive-types/std",
	"pallet-evm/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"cennznet-primitives/std",
	"precompile-utils/std",
]