[package]
name = "crml-sylo"
version = "1.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
codec = { version = "1.3.5", package = "parity-scale-codec", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", default-features = false }
frame-benchmarking = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "hotfix/cennznet-1.2.2", default-features = false, optional = true }
frame-support = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "hotfix/cennznet-1.2.2", default-features = false }
frame-system = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "hotfix/cennznet-1.2.2", default-features = false }
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "hotfix/cennznet-1.2.2", default-features = false }
sp-io = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "hotfix/cennznet-1.2.2", default-features = false }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "hotfix/cennznet-1.2.2", default-features = false }
sp-std = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "hotfix/cennznet-1.2.2", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = ["frame-benchmarking"]
