[package]
name = "crml-token-approvals"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
repository = "https://github.com/cennznet/cennznet"
description = "CENNZnet Token Approvals module"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }
frame-support = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747", default-features = false  }
frame-system = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747", default-features = false  }
cennznet-primitives = { path = "../../primitives", default-features = false }
sp-std = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747", default-features = false  }
sp-runtime = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747", default-features = false  }
crml-support = { path = "../support", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
pallet-evm = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "9fac81fceb918665de2e25a1ff7d5398cb2f8aba" }
sp-core = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747", default-features = false }

[dev-dependencies]
crml-generic-asset = { path = "../generic-asset" }
crml-nft = { path = "../nft" }
sp-io = { git = "https://github.com/cennznet/substrate", rev = "254219721084b533626ffa16b74c415771d46747" }
hex-literal = { version = "0.3.1" }

[features]
default = ["std"]
std = [
    "cennznet-primitives/std",
    "crml-support/std",
    "codec/std",
    "serde",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "pallet-evm/std",
    "sp-core/std",
]