[package]
name = "crml-token-approvals"
version = "2.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
repository = "https://github.com/cennznet/cennznet"
description = "CENNZnet Token Approvals module"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true, default-features = false }
frame-support = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false  }
frame-system = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false  }
cennznet-primitives = { path = "../../primitives", default-features = false }
sp-std = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false  }
sp-runtime = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false  }
crml-support = { path = "../support", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
pallet-evm = { default-features = false, git = "https://github.com/cennznet/frontier", rev = "890a535d105d206f7427550794c1973eeff9dd52" }
sp-core = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077", default-features = false, version = "4.0.0-dev" }

[dev-dependencies]
crml-generic-asset = { path = "../generic-asset" }
crml-nft = { path = "../nft" }
sp-io = { git = "https://github.com/cennznet/substrate", rev = "92f06d413796bb1443b31d92bde637c90742a077" }
hex-literal = { version = "0.3.1" }

[features]
default = ["std"]
std = [
    "cennznet-primitives/std",
    "crml-support/std",
    "codec/std",
    "serde",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "pallet-evm/std",
    "sp-core/std",
]
try-runtime = ["frame-support/try-runtime"]